# QR2

./: CMakeLists.txt  buildrelease.bat
src/: app.cpp  app.h  colorpanel.cpp  colorpanel.h  customtextinputbox.cpp  customtextinputbox.h  draggablepanel.cpp  draggablepanel.h  main.cpp  qrmethods.cpp  qrmethods.h  qrpanel.cpp  qrpanel.h
